--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "contentful": "^10.8.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
